[gd_scene load_steps=9 format=3 uid="uid://dh58umerr8be3"]

[ext_resource type="Texture2D" uid="uid://gg8cmxuicvpd" path="res://mainmenu/titlebg.png" id="1_hka38"]
[ext_resource type="Script" path="res://mainmenu/main_menu.gd" id="1_o3xm5"]
[ext_resource type="FontFile" uid="uid://1nor6t6xwwou" path="res://font/Roboto.ttf" id="2_xf8kc"]
[ext_resource type="Texture2D" uid="uid://ckuyu1j1eu6hr" path="res://mainmenu/buttonbg.png" id="3_fcqc5"]
[ext_resource type="Texture2D" uid="uid://bbvm5j23kjt6a" path="res://mainmenu/buttonbghover.png" id="4_cd5b3"]
[ext_resource type="Texture2D" uid="uid://btvyc4q4kgvio" path="res://mainmenu/buttonbgactive.png" id="4_qfehj"]
[ext_resource type="VideoStream" path="res://mainmenu/mainmenubg.hidden.ogv" id="4_t0dui"]
[ext_resource type="BitMap" uid="uid://b5nhytef40h6g" path="res://mainmenu/buttonbitmap.png" id="6_vhdif"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1155.0
offset_bottom = 986.0
script = ExtResource("1_o3xm5")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 2
offset_left = -492.0
offset_top = -388.0
offset_right = 1658.0
offset_bottom = 1038.0
stream = ExtResource("4_t0dui")
autoplay = true
expand = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_top = 24.0
offset_right = 1155.0
offset_bottom = 986.0
theme_override_constants/separation = 21
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("1_hka38")

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/TextureRect"]
layout_mode = 0
offset_left = 54.0
offset_top = 34.0
offset_right = 491.0
offset_bottom = 265.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_xf8kc")
theme_override_font_sizes/font_size = 84
text = "IBDP
The Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonRows" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 22

[node name="PlayButtonContainer" type="CenterContainer" parent="VBoxContainer/ButtonRows"]
layout_mode = 2

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/ButtonRows/PlayButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_fcqc5")
texture_pressed = ExtResource("4_qfehj")
texture_hover = ExtResource("4_cd5b3")
texture_click_mask = ExtResource("6_vhdif")

[node name="Label" type="Label" parent="VBoxContainer/ButtonRows/PlayButtonContainer/PlayButton"]
offset_left = 2.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xf8kc")
theme_override_font_sizes/font_size = 47
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButtonContainer" type="CenterContainer" parent="VBoxContainer/ButtonRows"]
layout_mode = 2

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer/ButtonRows/SettingsButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_fcqc5")
texture_pressed = ExtResource("4_qfehj")
texture_hover = ExtResource("4_cd5b3")
texture_click_mask = ExtResource("6_vhdif")

[node name="Label" type="Label" parent="VBoxContainer/ButtonRows/SettingsButtonContainer/SettingsButton"]
layout_mode = 2
offset_left = 40.0
offset_top = 8.0
offset_right = 210.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xf8kc")
theme_override_font_sizes/font_size = 47
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
